force-app/main/default/objects/ucinn_portal_Job_Application__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <referenceTo>ucinn_portal_Job__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>ucinn_portal_Job_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>